--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,9 @@ dependencies:
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   flutter_riverpod: ^2.5.0
-
+  charts_flutter: ^0.12.0
+  fl_chart: ^0.66.0
+  uuid: ^4.3.3
 dev_dependencies:
   flutter_test:
     sdk: flutter
