--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,8 +1,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
     <uses-permission android:name="android.permission.INTERNET" />
+     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
 
-    <!-- Optional: For vibration in notifications/snackbars -->
-    <uses-permission android:name="android.permission.VIBRATE" />
+     <uses-permission android:name="android.permission.VIBRATE" />
     <application
         android:label="smart ridebooking"
         android:name="${applicationName}"
