--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,10 @@ dependencies:
   charts_flutter: ^0.12.0
   fl_chart: ^0.66.0
   uuid: ^4.3.3
+  csv: ^6.0.0
+  path_provider: ^2.0.15
+  share_plus: ^12.0.1
+
 
 dev_dependencies:
   flutter_test:
