--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,14 @@ dependencies:
   csv: ^6.0.0
   path_provider: ^2.0.15
   share_plus: ^12.0.1
+  flutter_local_notifications: ^19.5.0
+  permission_handler: ^12.0.1
+
+
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: "assets/appicon.png"
 
 
 dev_dependencies:
@@ -57,6 +65,7 @@ dev_dependencies:
   hive_generator: ^2.0.0
   build_runner: ^2.4.0
   flutter_lints: ^5.0.0
+  flutter_launcher_icons: ^0.13.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -73,7 +82,8 @@ flutter:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
-
+assets:
+  - assets/images/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
 
