--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,8 +43,8 @@ dependencies:
   csv: ^6.0.0
   path_provider: ^2.0.15
   share_plus: ^12.0.1
-  flutter_local_notifications: ^19.5.0
-  permission_handler: ^12.0.1
+  mocktail: ^1.0.4
+  hive_test: ^1.0.1
 
 
 flutter_launcher_icons:
@@ -66,6 +66,7 @@ dev_dependencies:
   build_runner: ^2.4.0
   flutter_lints: ^5.0.0
   flutter_launcher_icons: ^0.13.1
+#  flutter_local_notifications: ^13.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
