--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -85,6 +85,7 @@ flutter:
   #   - images/a_dot_ham.jpeg
 assets:
   - assets/images/
+  - assets/screenshots/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
 
